@@ -1,2 +1,2 @@
 DOS2UNIX_VERSION = 5.0-beta1
-DOS2UNIX_DATE = 2010-02-13
+DOS2UNIX_DATE = 2010-02-15
