@@ -1,5 +1,9 @@
+2010-02-15 Erwin Waterlander <waterlan@xs4all.nl>
+	* unix2dos: Fix problem of reading Mac files.
+	* dos2unix: 'mac2unix' command can have a prefix.
+
 2010-02-13 Erwin Waterlander <waterlan@xs4all.nl>
-	* Bundle dos2unix and unix2dos in one package.
+	* Bundled dos2unix and unix2dos in one package.
 	* dos2unix/unix2dos : Cleanup messages and manual.
 	* dos2unix: Option -l --newline also works in MAC mode.
 	* unix2dos: Added option -l, --newline.
